employment history resue

--- a/src/app/modules/employeedetail/employeedocuments/employeedocuments.component.html
+++ b/src/app/modules/employeedetail/employeedocuments/employeedocuments.component.html
@@ -1,5 +1,4 @@
-<div class="divCls"><strong>Employee Documents</strong></div>
-<br>
+<div style="font-weight: bold;padding: 15px 15px 0px 15px;"><strong>Employee Document</strong></div>
 <alert></alert>
 <div class="divCls" fxLayout="row wrap" fxLayoutGap="100px">
     <form [formGroup]="uploadForm" fxLayout="row" fxLayoutAlign="space-between center">
