news n event added

--- a/src/app/modules/control/add-master-data/add-master-data.component.scss
+++ b/src/app/modules/control/add-master-data/add-master-data.component.scss
@@ -51,19 +51,14 @@ button {
 mat-form-field {
     margin-right: 5px;
 }
-.mat-column-Description {
-    flex: 1 0 25%;
+.mat-column-Name,.mat-column-Description,.mat-column-Logic {
+    flex:1 1 250px;
 }
-.mat-column-Logic {
-    flex: 1 0 20%;
+.mat-column-Sequence,.mat-column-Active,.mat-column-Id {
+    justify-content: center;
+    flex:1 1 50px;
 }
-.mat-column-Sequence,
-.mat-column-Active {
-    flex: 1 0 50;
-}
-.mat-column-MasterDataName {
-    flex: 1 0 10%;
-}
+
 // mat-cell:first-of-type{
 //     padding-left: 0px;
 // }
