--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -16,7 +16,7 @@
                 </mat-form-field> -->
                 <mat-form-field fxFlex appearance="outline">
                     <mat-label>Master Name</mat-label>
-                    <mat-select formControlName="ParentId" fxFlex (selectionChange)="enable($event)">
+                    <mat-select #ParentId formControlName="ParentId" fxFlex (selectionChange)="enable($event)">
                         <mat-option *ngFor="let master of TopMasters" [value]="master.MasterDataId">
                             {{master.MasterDataName}}
                         </mat-option>
@@ -41,32 +41,33 @@
             <mat-divider></mat-divider>
             <mat-table [dataSource]="datasource" matSort>
                 <ng-container matColumnDef="MasterDataId">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.MasterDataId}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="MasterDataName">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.pc]="10">
-                            <input matInput [value]="element.MasterDataName" [(ngModel)]="element.MasterDataName"
+                        <mat-form-field [style.width.px]="250">
+                            <input [disabled]="Parent=='Information Restriction'" matInput 
+                            [value]="element.MasterDataName" [(ngModel)]="element.MasterDataName"
                                 autocomplete="Off" placeholder="" (blur)="onBlur(element)" [minlength]="1"
                                 [maxlength]="50">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Logic">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Logic </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Logic</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.pc]="20">
+                        <mat-form-field [style.width.px]="250">
                             <textarea matInput [value]="element.Logic" [(ngModel)]="element.Logic" autocomplete="Off"
                                 (blur)="onBlur(element)" [maxlength]="256"></textarea>
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Sequence">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Sequence </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Sequence</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field [style.width.px]="50">
                             <input type="number" matInput [value]="element.Sequence" [(ngModel)]="element.Sequence"
@@ -75,9 +76,9 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Description">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Description </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Description</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.pc]="25">
+                        <mat-form-field [style.width.px]="250">
                             <textarea matInput [value]="element.Description" [(ngModel)]="element.Description"
                                 autocomplete="Off" (blur)="onBlur(element)" [maxlength]="2000"></textarea>
                         </mat-form-field>
@@ -85,7 +86,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef style="justify-content: center;">
-                        <button style="margin-right: 15px;" [disabled]="loading" matTooltip="new item"
+                        <button style="margin-right: 15px;" [disabled]="loading || Permission=='read' || Parent=='Information Restriction'" matTooltip="new item"
                             *ngIf="enableAddNew" class="mat-raised-button" (click)="AddData()" fxFlex="10">
                             <mat-icon>add</mat-icon>
                         </button>
