--- a/src/app/modules/studentexam/examslot/examslot.component.html
+++ b/src/app/modules/studentexam/examslot/examslot.component.html
@@ -43,7 +43,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="SlotName">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Slot Name
+                    <mat-header-cell *matHeaderCellDef>Slot Name
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         {{element.SlotName}}
