--- a/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
+++ b/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
@@ -15,7 +15,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-form-field appearance="outline" [style.width.pc]="20">
+                <!-- <mat-form-field appearance="outline" [style.width.pc]="20">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId" multiple>
                         <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
@@ -31,55 +31,30 @@
                             {{item.MasterDataName}}
                         </mat-option>
                     </mat-select>
-                </mat-form-field>                  
+                </mat-form-field>                   -->
                 <button [disabled]="loading" class="mat-raised-button" (click)="GetSlotNClassSubjects()">
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
             <p>Record will be displayed if it is defined in class subject module.</p>
-            <mat-table #table [dataSource]="dataSource">
-                <!-- <ng-container matColumnDef="Slot">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Slot
-                    </mat-header-cell>
-                    <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                        {{element.Slot}}
-                    </mat-cell>
-                </ng-container> -->
-                <ng-container matColumnDef="ClassSubject">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Class Subject
-                    </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
-                           {{element.ClassSubject}}
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Active">
-                    <mat-header-cell *matHeaderCellDef>
-                        <mat-checkbox *ngIf="SlotNClassSubjects.length>0" (click)="$event.stopPropagation()" (change)="checkall($event)">
-                        </mat-checkbox>&nbsp;Active
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                            [checked]="element.Active==1?true:false">
+            <div fxLayout="row" *ngFor="let row of ClassWiseSubjectDisplay;let topindx=index">
+
+                <div style="padding: 15px 15px 0px 15px;" *ngFor="let cell of row|keyvalue">
+                    <div style="display: block;justify-content: center;" *ngIf="cell.key!='ClassId'">
+                        {{cell.key=='ClassName'?cell.value:cell.key}}
+                        <mat-checkbox matTooltip="select all in row"
+                            *ngIf="cell.key !='ClassName'" (click)="$event.stopPropagation()"
+                            (change)="SelectAllInRow(row,$event,cell.value)" [checked]="cell.value==1?true:false">
                         </mat-checkbox>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Action">
-                    <mat-header-cell *matHeaderCellDef>
-                        <button [disabled]="loading" *ngIf="SlotNClassSubjects.length>0" 
-                            matTooltip="save all" mat-mini-fab (click)="SaveAll()">
-                            <mat-icon>all_out</mat-icon>
-                        </button>
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" 
-                        mat-mini-fab (click)="Save(element)">
-                            <mat-icon>save</mat-icon>
-                        </button>
-                    </mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
-            </mat-table>
+                    </div>
+                </div>
+                <button [disabled]="loading || Permission=='read' || !row.Action" matTooltip="save"
+                        mat-mini-fab (click)="SaveRow(row)">
+                        <mat-icon>save</mat-icon>
+                    </button>
+                <mat-divider></mat-divider>
+
+            </div>
         </div>
     </div>
 </div>
