--- a/src/app/modules/studentexam/exams/exams.component.scss
+++ b/src/app/modules/studentexam/exams/exams.component.scss
@@ -9,7 +9,7 @@ button {
 mat-cell:first-of-type {
     padding-left: 0px;
 }
-.mat-column-StartDate,.mat-column-EndDate{
+.mat-column-StartDate,.mat-column-EndDate,.mat-column-ReleaseDate{
     flex:0 0 130px;
 }
 .mat-column-Active,.mat-column-ReleaseResult {
