--- a/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
+++ b/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
@@ -9,7 +9,7 @@
             <form [formGroup]="searchForm">
                 <mat-form-field appearance="outline">
                     <mat-label>Exam</mat-label>
-                    <mat-select formControlName="searchExamId">
+                    <mat-select formControlName="searchExamId" (selectionChange)="GetResultReleased($event)">
                         <mat-option *ngFor="let item of Exams" [value]="item.ExamId">
                             {{item.ExamName}}
                         </mat-option>
@@ -51,7 +51,7 @@
                 <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
                     <mat-header-cell *matHeaderCellDef>{{disCol!='Action'?disCol:''}}
                         <div *ngIf="ExamStudentSubjectResult.length>0" fxLayoutAlign="center center">
-                            <button *ngIf="disCol=='Action'" [disabled]="loading || Permission=='read'"
+                            <button *ngIf="disCol=='Action'" [disabled]="loading || Permission=='read' || ResultReleased==1"
                                 matTooltip="save all" mat-mini-fab (click)="UpdateAll()">
                                 <mat-icon>all_out</mat-icon>
                             </button>
@@ -63,7 +63,7 @@
                                 [value]="element[disCol]" [(ngModel)]="element[disCol]">
                         </mat-form-field>
                         <button *ngIf="disCol=='Action'"
-                            [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save"
+                            [disabled]="loading || Permission=='read' || !element.Action || ResultReleased==1" matTooltip="save"
                             mat-mini-fab (click)="SaveRow(element)">
                             <mat-icon>save</mat-icon>
                         </button>
