--- a/src/app/modules/schooltimetable/classperiod/classperiod.component.html
+++ b/src/app/modules/schooltimetable/classperiod/classperiod.component.html
@@ -43,14 +43,14 @@
             <mat-table #table [dataSource]="dataSource">
 
                 <ng-container matColumnDef="PeriodName">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Period
+                    <mat-header-cell *matHeaderCellDef>Period
                     </mat-header-cell>
                     <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                         {{element.PeriodName}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="PeriodTypeId">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Period Type
+                    <mat-header-cell *matHeaderCellDef>Period Type
                     </mat-header-cell>
                     <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                         <mat-form-field>
@@ -63,7 +63,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="FromToTime">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Start and End Time
+                    <mat-header-cell *matHeaderCellDef>Start and End Time
                     </mat-header-cell>
                     <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                         <mat-form-field>
@@ -73,7 +73,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Sequence">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Sequence
+                    <mat-header-cell *matHeaderCellDef>Sequence
                     </mat-header-cell>
                     <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                         <mat-form-field [style.width.px]="50">
