--- a/src/app/modules/studentexam/exams/exams.component.scss
+++ b/src/app/modules/studentexam/exams/exams.component.scss
@@ -12,7 +12,7 @@ mat-cell:first-of-type {
 .mat-column-StartDate,.mat-column-EndDate,.mat-column-ReleaseDate{
     flex:0 0 130px;
 }
-.mat-column-Active,.mat-column-ReleaseResult {
+.mat-column-Active,.mat-column-ReleaseResult,.mat-column-ExamId {
     justify-content: center;
     flex:0 0 70px;
 }
