--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -4,52 +4,48 @@
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
-    <form [formGroup]="searchForm">
-        <mat-form-field appearance="outline">
-            <mat-label>Class</mat-label>
-            <mat-select formControlName="searchClassId">
-                <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
-                    {{item.ClassName}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Section</mat-label>
-            <mat-select formControlName="searchSectionId">
-                <mat-option value="0">--section--</mat-option>
-                <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
-                    {{item.MasterDataName}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Gender</mat-label>
-            <mat-select formControlName="searchGenderId">
-                <mat-option value="0">--section--</mat-option>
-                <mat-option *ngFor="let item of Genders" [value]="item.MasterDataId">
-                    {{item.MasterDataName}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <button [disabled]="loading" class="mat-raised-button" (click)="GetStudentClasses()">
-            <mat-icon>search</mat-icon>
-        </button>
-        <!-- Or    
-            <a [routerLink]="[ '/path', routeParam ]">Upload excel</a>       
-            <a [routerLink]="[ '/path', routeParam ]">Download student class template</a>        -->
+    <form style="display: flex;flex-direction: row;justify-content: space-around;" [formGroup]="searchForm">
+        <div>
+            <mat-form-field appearance="outline">
+                <mat-label>Class</mat-label>
+                <mat-select formControlName="searchClassId">
+                    <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                        {{item.ClassName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Section</mat-label>
+                <mat-select formControlName="searchSectionId">
+                    <mat-option value="0">--section--</mat-option>
+                    <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
+                        {{item.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button [disabled]="loading" class="mat-raised-button" (click)="GetStudentClasses()">
+                <mat-icon>search</mat-icon>
+            </button>
+        </div>
+        <div style="padding:15px;border:1px solid lightgray">
+            <span style="padding: 15px;">{{RollNoGenerationSortBy}}</span>
+            <button [disabled]="loading || StudentClassList.length==0 || PromotePermission=='read' || checkBatchIdNSelectedIdEqual==0"
+                class="mat-raised-button" matTooltip="to next class or session"
+                (click)="PromoteAll()">
+                <mat-icon>loupe</mat-icon>
+            </button>
+            <button matTooltip="generate roll no"
+                [disabled]="loading || StudentClassList.length==0 || Permission=='read'" class="mat-raised-button"
+                (click)="GenerateRollNo()">
+                <mat-icon>hdr_auto</mat-icon>
+            </button>
+        </div>
     </form>
     <mat-table #table [dataSource]="dataSource" matSort>
-        <ng-container matColumnDef="Student">
+        <ng-container matColumnDef="StudentName">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Student </mat-header-cell>
             <mat-cell *matCellDef="let element">
-                {{element.Student}}
-            </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="ClassName">
-            <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Class
-            </mat-header-cell>
-            <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                {{element.ClassName}}
+                {{element.StudentName}}
             </mat-cell>
         </ng-container>
         <ng-container matColumnDef="RollNo">
@@ -102,15 +98,9 @@
         </ng-container>
         <ng-container matColumnDef="Action">
             <mat-header-cell *matHeaderCellDef>
-                <button
-                    [disabled]="loading || StudentClassList.length==0 || Permission=='read'"
-                    matTooltip="promote" mat-mini-fab (click)="SaveAll()">
+                <button [disabled]="loading || StudentClassList.length==0 || Permission=='read'" matTooltip="save all"
+                    mat-mini-fab (click)="SaveAll()">
                     <mat-icon>all_out</mat-icon>
-                </button>
-                <button
-                    [disabled]="loading || StudentClassList.length==0 || PromotePermission=='read' || checkBatchIdNSelectedIdEqual==0"
-                    matTooltip="promote" mat-mini-fab (click)="PromoteAll()">
-                    <mat-icon>loupe</mat-icon>
                 </button>
             </mat-header-cell>
             <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
@@ -118,7 +108,8 @@
                     (click)="SaveRow(element)">
                     <mat-icon>save</mat-icon>
                 </button>
-                <button [disabled]="loading|| PromotePermission=='read'|| PromotePermission=='deny' || checkBatchIdNSelectedIdEqual==0"
+                <button
+                    [disabled]="loading|| PromotePermission=='read'|| PromotePermission=='deny' || checkBatchIdNSelectedIdEqual==0"
                     matTooltip="promote" mat-mini-fab (click)="PromoteRow(element)">
                     <mat-icon>loupe</mat-icon>
                 </button>
