--- a/src/app/modules/schoolreports/results/results.component.html
+++ b/src/app/modules/schoolreports/results/results.component.html
@@ -43,9 +43,10 @@
             <mat-table #table [dataSource]="dataSource" matSort>                
             
                 <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header [ngStyle]="{'justify-content':'center'}">{{disCol!='Action'?disCol:''}}                      
+                    <mat-header-cell *matHeaderCellDef mat-sort-header [ngStyle]="{'justify-content':disCol!='Rank' && disCol!='Student'?'center':'start'}">
+                        {{disCol!='Action'?disCol:''}}                      
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element" [ngStyle]="{'justify-content':disCol!='Student'?'center':'start'}">                        
+                    <mat-cell *matCellDef="let element" [ngStyle]="{'justify-content':disCol=='Rank' || disCol=='Division' || disCol=='Student'?'start':'center'}">                        
                        {{element[disCol]}}                                    
                     </mat-cell>
                 </ng-container>
