--- a/src/app/modules/studentexam/exams/exams.component.html
+++ b/src/app/modules/studentexam/exams/exams.component.html
@@ -4,6 +4,8 @@
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
+    Until result released, result will not be available for public view. After result released, student exam status will be generated and 
+    marks can no longer be entered/edited for that examination.
     <div style="padding: 15px;" fxLayout="row wrap">
         <div style="width: 100%;">
             <mat-table #table [dataSource]="dataSource">
@@ -56,7 +58,7 @@
                     <mat-header-cell *matHeaderCellDef>ReleaseDate
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element.ReleaseDate|date:'dd/MM/yyyy'}}
+                        {{element.ReleaseDate}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Active">
