--- a/src/app/modules/schoolreports/result/result.component.html
+++ b/src/app/modules/schoolreports/result/result.component.html
@@ -40,14 +40,19 @@
                 </button>
             </form>            
 
-            <mat-table #table [dataSource]="dataSource" matSort>                
+            <mat-table style="min-width: 600px;max-width: 1000px;" #table [dataSource]="dataSource" matSort>                
             
                 <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header [ngStyle]="{'justify-content':disCol!='Rank' && disCol!='Student'?'center':'start'}">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header 
+                    [ngStyle]="{'justify-content':disCol!='Rank' && disCol!='Student'?'center':'start'}">
                         {{disCol!='Action'?disCol:''}}                      
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element" [ngStyle]="{'justify-content':disCol=='Rank' || disCol=='Division' || disCol=='Student'?'start':'center'}">                        
-                       {{element[disCol]}}                                    
+                    <mat-cell *matCellDef="let element" 
+                        [ngStyle]="{'justify-content':disCol=='Rank' 
+                        || disCol=='Division' 
+                        || disCol=='Student'?'start':'center'}">                        
+                        
+                        {{disCol=='Percent'?[element[disCol]| number : '1.2-2']:element[disCol]}}                                    
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
